--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <div class="name-location">
                 <p class="name">Mohammad Arsalan Rather</p>
-                <p class="location">Aaribagh, Kashmir</p>
+                <p class="location">Srinagar, Kashmir</p>
             </div>
             <p class="tagline">
                 "Aspiring Software Developer and dedicated student passionate about creating innovative solutions.
