--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="Social Links,github,instagram,HTML,CSS">
     <title>Social Profile Links - Arsalan Rather</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="Assets/favicon.png" type="image/png">
 </head>
 <body>
     <main>
