Update FavIcon png & ico both added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <meta name="keywords" content="Social Links,github,instagram,HTML,CSS">
     <title>Social Profile Links - Arsalan Rather</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="Assets/favicon.ico" type="image/png">
+    <link rel="icon" href="Assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="Assets/favicon.png" type="image/png">
+    
 </head>
 <body>
     <main>
