Update <meta> tag description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Mohammad Arsalan Rather">
-    <meta name="description" content="This is a social profile links webpage of Mr. Mohammad Arsalan Rather. It is created using only HTML and CSS.">
+    <meta name="description" content="Assalamualikusm! I am Mr. Mohammad Arsalan Rather. Aspiring Software Developer and dedicated student passionate about creating innovative solutions. Seeking opportunities for growth, development and collaboration.">
     <meta name="keywords" content="Social Links,github,instagram,HTML,CSS">
     <title>Social Profile Links - Arsalan Rather</title>
     <link rel="stylesheet" href="style.css">
