--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li><a href="https://github.com/Arslanamin404" class="github" target="_blank">Github</a></li>
                     <li><a href="https://www.linkedin.com/in/mohammad-arsalan-rather-27628722a" class="linkedin" target="_blank">Linkedin</a></li>
                     <li><a href="https://instagram.com/_.arsl_an" class="instagram" target="_blank">Instagram</a></li>
-                    <li><a href="mailto:futuregen.jk@gmail.com" class="mail">Gmail</a></li>
+                    <li><a href="mailto:arslanamin.org@gmail.com" class="mail">Gmail</a></li>
                     <li><a href="https://x.com/arsalan_org" class="twitter" target="_blank">Twitter</a></li>
                 </ul>
             </div>
